# enummapmap

./: .gitignore  LICENSE  README.md  changelog  enummapmap.cabal
Data/: EnumMapSet.hs
Data/EnumMapMap/: Base.hs  Base2.hs  Lazy.hs  Strict.hs
Data/EnumMapSet/: Base.hs
bench/: IntMapVsEnumMapMap.hs
test/: EnumMapMapVsIntMap.hs  EnumMapSetVsIntSet.hs  UnitBoth.hs  UnitEnumMapMap.hs  UnitEnumMapSet.hs
