name:               enummapmap
version:            0.0.1
synopsis:           IntMap of IntMaps using Enum types as keys
description:        This package provides 'intmaps of intmaps' using Enum types as keys.  There is
                    provision for maps up to 4 deep, a 'map of maps of maps of maps'.  The code is
                    based upon Data.IntMap in containers 5.0.
license:            BSD3
author:             Matthew West and authors of containers v5.0

category:           Data
build-type:         Simple

cabal-version:      >=1.10

Library
   exposed-modules: Data.EnumMapMap.Base
   build-depends:   base > 4.0
   ghc-options:     -Wall
   default-language: Haskell2010

Test-Suite test-enummapmap
    type:             exitcode-stdio-1.0
    main-is:          UnitEnumMapMap.hs
    hs-source-dirs:   test
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base >= 4,
                      HUnit,
                      QuickCheck >= 2,
                      hspec >= 0.9,
                      enummapmap
