name:               enummapmap
version:            0.0.2
synopsis:           Map of maps using Enum types as keys
description:        This package provides 'maps of maps' using Enum types as keys.  The code
                    is based upon Data.IntMap in containers 5.0.
license:            BSD3
author:             Matthew West and authors of containers v5.0
maintainer:
category:           Data
build-type:         Simple
tested-with:        ghc741

cabal-version:      >=1.10

source-repository head
   type:            git
   location:        http://github.com/bovinespirit/enummapmap.git

Library
   exposed-modules: Data.EnumMapMap.Lazy, Data.EnumMapMap.Strict
   other-modules:   Data.EnumMapMap.Base
   build-depends:   base > 4.0,
                    deepseq
   ghc-options:     -Wall
   default-language: Haskell2010

Test-Suite test-enummapmap-lazy
    type:             exitcode-stdio-1.0
    main-is:          UnitEnumMapMap.hs
    hs-source-dirs:   test
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base >= 4,
                      HUnit,
                      QuickCheck >= 2,
                      hspec >= 0.9,
                      deepseq,
                      enummapmap
    cpp-options:      -DTESTING -DLAZY

Test-Suite test-enummapmap-intmap-lazy
    type:             exitcode-stdio-1.0
    main-is:          EnumMapMapVsIntMap.hs
    hs-source-dirs:   test
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base >= 4,
                      HUnit,
                      QuickCheck >= 2,
                      hspec >= 0.9,
                      deepseq,
                      containers >= 0.4.2,
                      enummapmap
    cpp-options:      -DTESTING -DLAZY

Test-Suite test-enummapmap-strict
    type:             exitcode-stdio-1.0
    main-is:          UnitEnumMapMap.hs
    hs-source-dirs:   test
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base >= 4,
                      HUnit,
                      QuickCheck >= 2,
                      hspec >= 0.9,
                      deepseq,
                      enummapmap
    cpp-options:      -DTESTING

Test-Suite test-enummapmap-intmap-strict
    type:             exitcode-stdio-1.0
    main-is:          EnumMapMapVsIntMap.hs
    hs-source-dirs:   test
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base >= 4,
                      HUnit,
                      QuickCheck >= 2,
                      hspec >= 0.9,
                      deepseq,
                      containers >= 0.4.2,
                      enummapmap
    cpp-options:      -DTESTING
